src/semantics/tests/snapshots/ppl__semantics__tests__wrong_initializer_type.error.snap
---
source: src/semantics/tests/mod.rs
expression: err
---
Error: semantics::type_mismatch

  × expected `Integer` type, got `String`

Error:   × Integer
   ╭─[wrong_initializer_type.ppl:2:2]
 1 │ type Point:
 2 │     x: Integer
   ·     ┬
   ·     ╰── this has `Integer` type
 3 │ 
   ╰────
Error:   × String
   ╭─[wrong_initializer_type.ppl:4:12]
 3 │ 
 4 │ Point { x: "" }
   ·            ─┬
   ·             ╰── this has `String` type
   ╰────
